created wizard component

--- a/src/sass/wemesh/sidebar.scss
+++ b/src/sass/wemesh/sidebar.scss
@@ -599,7 +599,7 @@
           > a {
             background: none !important;
             border-top: none !important;
-            color: $text-color;
+            color: #fff;
 
             .letter-icon-wrapper {
               background: #666C71;
