--- a/src/sass/wemesh/_bases.scss
+++ b/src/sass/wemesh/_bases.scss
@@ -76,6 +76,7 @@ h1, h2, h3, h4, h5 {
         font-weight: 600;
     }
 }
+[v-cloak] { display: none; } 
 /* ---------------------------------------------------------------------- */
 /*  Labels and Badges
 /* ---------------------------------------------------------------------- */
